$Id: History,v 1.44 2001-10-23 08:09:19 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 20, 2001 H.Kurasige
- Modified Set/GetCuts() related methods in G4VUserPhysicsList
  for "cut-per-materials" implementation.

Oct 23, 2001 G.Cosmo (run-V03-02-06)
- Merged changes in "run-V03-02-04a" and "run-V03-02-05" for removal of
  STLinterface module.
 
Oct 11, 2001 G.Cosmo (run-V03-02-05)
- Replaced inclusion of ctoken.h with G4Tokenizer.hh in
  G4UserPhysicsListMessenger.cc.
- Co-works with tag "globals-V03-02-03" where the STLInterface
  module has been removed.

Oct 11, 2001 G.Cosmo (run-V03-02-04a)
- Modified G4RunManager:
  o added pointer to G4GeomTestMessenger for including new default
    set of commands /geomtest/* in kernel, providing ability to check
    for volumes overlaps in the user's detector geometry.
  o modified call to G4GeometryManager::CloseGeometry() by adding
    argument to verbose-mode.
- The tag co-works with "geometry-V03-02-01" and "config-V03-02-06b"

Oct 10, 2001 M.Asai (run-V03-02-04)
- Add an option to store random number engine status for BOTH
  of each run and each event.

Oct 10, 2001 H.Kurashige
- Modify G4VUserPhysicsList::SetCutsForOthers to fix problems of