@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4RunManager.hh,v 1.19 2001-10-22 17:03:42 gcosmo Exp $
+// $Id: G4RunManager.hh,v 1.20 2001-10-24 15:25:19 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -78,7 +78,6 @@ class G4UserSteppingAction;
 class G4VPhysicalVolume;
 class G4Timer;
 class G4RunMessenger;
-class G4GeomTestMessenger;
 class G4DCtable;
 class G4Run;
 
@@ -191,7 +190,6 @@ class G4RunManager
 
   private:
     G4RunMessenger* runMessenger;
-    G4GeomTestMessenger* geomTestMessenger;
 
   protected:
     G4bool geometryInitialized;
