@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4RunManager.cc,v 1.34 2001-10-23 16:35:19 gcosmo Exp $
+// $Id: G4RunManager.cc,v 1.35 2001-10-24 15:25:20 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -40,7 +40,6 @@
 #include "G4UserRunAction.hh"
 #include "G4VUserPrimaryGeneratorAction.hh"
 #include "G4GeometryManager.hh"
-#include "G4GeomTestMessenger.hh"
 #include "G4SDManager.hh"
 #include "G4TransportationManager.hh"
 #include "G4VPhysicalVolume.hh"
@@ -79,7 +78,6 @@ G4RunManager::G4RunManager()
   eventManager = new G4EventManager();
   timer = new G4Timer();
   runMessenger = new G4RunMessenger(this);
-  geomTestMessenger = new G4GeomTestMessenger();
   previousEvents = new G4std::vector<G4Event*>;
   G4ParticleTable::GetParticleTable()->CreateMessenger();
   G4ProcessTable::GetProcessTable()->CreateMessenger();
@@ -101,7 +99,6 @@ G4RunManager::~G4RunManager()
   if(verboseLevel>1) G4cout << "Deletion of G4 kernel class start." << G4endl;
   delete timer;
   delete runMessenger;
-  delete geomTestMessenger;
   physicsList->RemoveProcessManager();
   G4ParticleTable::GetParticleTable()->DeleteMessenger();
   G4ProcessTable::GetProcessTable()->DeleteMessenger();
