@@ -1,4 +1,4 @@
-$Id: History,v 1.44 2001-10-23 08:09:19 gcosmo Exp $
+$Id: History,v 1.45 2001-10-24 15:25:19 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -20,6 +20,10 @@ committal in the CVS repository !
 Oct 20, 2001 H.Kurasige
 - Modified Set/GetCuts() related methods in G4VUserPhysicsList
   for "cut-per-materials" implementation.
+
+Oct 24, 2001 G.Cosmo (run-V03-02-07)
+- Removed references to G4GeomTestMessenger now moved to geometry/volumes
+  module. Files G4RunManager[.hh.cc], GNUmakefile.
 
 Oct 23, 2001 G.Cosmo (run-V03-02-06)
 - Merged changes in "run-V03-02-04a" and "run-V03-02-05" for removal of
